--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "work-with-webpack",
   "version": "1.0.0",
   "description": "Use webpack to bundle JavaScript.",
-  "private": true,
+  "private": false,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "webpack --watch",
     "start": "webpack serve --open",
-    "server": "node server.js",
-    "build": "webpack"
+    "build": "webpack",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -41,7 +41,8 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "gh-pages": "^1.1.0"
   },
   "main": "webpack.config.js"
 }
